# foxieflakey.github.io

./: .gitignore  .gitmodules  404.html  Cargo.toml  Makefile  dep.php  gallery.html  github-pages-config.mk  index.html  local-config-example.mk  router.php  test.h
.github/workflows/: deploy page.yaml  deploy_page.yml
css/: index.css  navbar.css
css/pages/: gallery_common.css  home.css
gallery/: index.html
gallery/2025/: index.html
gallery/template/: art_addr_bar.html  listing_end.html  listing_start.html  page_end.html  page_start.html
html_preprocess/: Cargo.toml
html_preprocess/src/: lib.rs  main.rs  util.rs
html_preprocess/src/html/: encoder.rs  import_resolver.rs  lexer.rs  mod.rs  parser.rs  replacer_resolver.rs  template_resolver.rs  util.rs
html_stuff/: Cargo.toml
html_stuff/src/: html.rs  html_display.rs  html_encoder.rs  lib.rs  main.rs  prefix_writer.rs  preprocess.rs
include/: common_metadata.html  page_footer.html  page_header.html
js/: error.js
scripts/: generate-sitemap.lua
site/: common.inc.html  header.inc.html  index.html  metadata.inc.html  page1.html  page2.html  projects.html
site/alpine_ppa/: index.html
site/blogs/: how-i-make-alpine-packages.html  index.html
site/favourites/: index.html
site/gallery/: index.html
site/journeys/: index.html
src/: .nojekyll  404.html  index.html  robots.txt
src/creations/: index.html
src/css/: gallery.css  index.css  navbar.css  parasitic_popup.css
src/gallery/: Makefile  drawings.lua  gen_make_DEV_ONLY.lua  (+5 more)
web/: Cargo.toml  index.html
web/components/: button.html  page.html
web/css/: global.css
web/data/: 404.html  index.html
web/data/arts/: index.html
web/data/components/: opengraph.html  page.html  popup.html
web/data/creations/: index.html  popup.html
web/data/creations/CSS_animation/: index.html  popup.css
web/data/creations/InteraksiManusiaKomputer_ServerDashboard/: index.html
web/data/creations/InteraksiManusiaKomputer_ServerDashboard/css/: global.css
web/data/creations/RPGGameCollege/: index.html
web/data/css/: global.css  popup.css
web/data/css/pages/: arts.css
web/data/js/: navbar.js
web/src/: builder.rs  config.rs  macros.rs  main.rs  server.rs  util.rs
web/src/builder/: navbar.rs
web/src/builder/arts/: card.rs  mod.rs
web/src/config/: arts.rs
web/src/config/arts/: data.rs
(+52 files in other folders)
