[package]
name = "html_preprocess"
version = "0.1.0"
edition = "2024"
rust-version = "1.97.1"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
codemap = "0.1.3"
codemap-diagnostic = "0.1.2"
either = "1.16.0"
html-escape = "0.2.14"
path_jail = "0.4.0"
pushback-iter = "0.2.0"
simple-minify-html = "0.17.2"
