[package]
name = "web"
version = "0.1.0"
edition = "2024"
rust-version = "1.97.1"

[dependencies]
axum = { version = "0.8.9", features = ["macros"] }
axum-extra = { version = "0.12.6", features = ["typed-header"] }
axum-range = "1.0.0"
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive"] }
codemap = "0.1.3"
codemap-diagnostic = "0.1.2"
html-escape = "0.2.14"
html_preprocess = { path = "../html_preprocess" }
human_bytes = "0.4.3"
humantime = "2.4.0"
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg", "gif"] }
infer = { version = "0.19.0", default-features = false, features = ["alloc"] }
lightningcss = "1.0.0-alpha.71"
mime = "0.3.17"
mime2ext = "0.1.54"
strum = { version = "0.28.0", features = ["derive"] }
tokio = { version = "1.52.3", features = ["net", "rt"] }
